# rkos-archive-20230925

./: .gitignore  Cargo.toml  README.md
.github/workflows/: base.yml  rust.yml
autowork/: arch_iso_aotu_build.sh  autoconfig_server.sh  create_qemu_img.sh
builder_iso/: README.md  packages.x86_64
builder_iso/boot/: config.json  creds.json  disk.json
builder_iso/install_configs/: user_configuration.json  user_disk_layout.json
builder_iso/releng/: packages.x86_64
src/: build_lfs_sys.rs  build_rust_packages.rs  build_temp_toolchain.rs  clean_up_and_config.rs  config-6.1  config_sys.rs  create_dirs.sh  main.rs  make_lfs_bootable.rs  prepare_env.sh  prepare_host_sys.rs  umount.sh  utils.rs  vars.rs
src/after_chroot_script/: clean_up.sh  util-linux.sh
src/base_package_script/: attr.sh  automake.sh  bash.sh  bc.sh  binutils.sh  bzip2.sh  check.sh  clean_tmp_file.sh  clean_up.sh  cmake.sh  coreutils.sh  coreutils_rust.sh  curl.sh  dejagnu.sh  dinjagnu.sh  e2fsprogs.sh  eudev.sh  expat.sh  expect.sh  findutils.sh  flex.sh  gawk.sh  gcc.sh  gdbm.sh  gettext.sh  glibc.sh  gmp.sh  gperf.sh  groff.sh  grub.sh  inetutils.sh  intltool.sh  iproute.sh  kbd.sh  kmod.sh  less.sh  libcap.sh  libelf.sh  libffi.sh  libpcap.sh  (+35 more)
src/chroot_scripts/: after_chroot_create_dirs.sh  after_chroot_create_files.sh  chown.sh
src/configs/: all_packages.json  base_config.json  base_configs.json  base_packages.json  cross_compile_packages.json  host_packages.json  log4rs.yaml  new.json  packages.json  packages_info.json  rust_support_packages.json  temp_toolchains.json
(+95 files in other folders)
