[package]
name = "lfs_pro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dagrs = {git="https://github.com/open-rust-initiative/dagrs"}
libparted = "0.1.3"
nix = "0.17.0"
serde_json = "1.0"
serde = "1.0.1"
lazy_static = "1.1.1"
glob = "0.3.1"
to_absolute = "0.1.0"
log4rs = "1.2.0"
log = "0.4.17"

