[package]
name = "rkos-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dagrs={git="https://github.com/xyyy1420/dagrs"}
libparted = "0.1.3"
nix = "0.17.0"
serde_json = "1.0"
serde = "1.0.1"
lazy_static = "1.1.1"
glob = "0.3.1"
to_absolute = "0.1.0"
log4rs = "1.2.0"
log = "0.4.17"
clap = { version = "4.0.0", features = ["derive"] }
once_cell="1.9.0"
cmd_lib = "1.3.0"
walkdir = "2.3.2"
requestty = "0.5.0"
regex = "1.6.0"
downloader="0.2.7"

